--- a/app/views/popup/_carmodelpopup_two.html.erb
+++ b/app/views/popup/_carmodelpopup_two.html.erb
@@ -357,6 +357,7 @@
               %>
               <%= form.select :marke, all_makes,
                               {}, { id:"marke-select", class: "form-select bg-light", aria: {label: "Default select example"}}%>
+              <%= form.hidden_field :car_marke_value, value: ''  %>
             </div>
             <div class="mt-3">
               <label class="d-block" >
@@ -477,41 +478,6 @@
 
 <script type="text/javascript">
   $(document).ready(function() {
-    // $("#model-select").change(function() {
-    //   var selectedModel = this.value;
-    //   var selectedMark = $( "#marke-select option:selected" ).val();
-    //   console.log(selectedModel);
-    //   console.log(selectedMark);
-
-    //   $.ajax({
-    //     url: "https://api.car2db.com/api/auto/v1/trim.getAll.csv.de?id_type=1&api_key=Patrick.Bartels@gmail.com07826d8551ba1146a91ef240875fdd02",
-    //     type: "GET",
-    //     data: {state: $(this).val()},
-    //     success: function(data) {
-    //       var listitems = [];
-    //       var allRows = data.split(/\r?\n|\r/);
-    //       for (var singleRow = 0; singleRow < allRows.length; singleRow++) {
-    //         if (singleRow === 0) { continue; }
-    //         var rowCells = allRows[singleRow].split(',');
-
-    //         if (rowCells[2] != "'"+selectedModel+"'") {
-    //           continue;
-    //         } else {
-    //           var trim = rowCells[3].replace(/'/g, "");
-    //           var year_start = rowCells[4].replace(/'/g, "");
-    //           var year_end = rowCells[5].replace(/'/g, "");
-    //           listitems += "<tr><td>" + trim + "</td><td>" + year_start + " - " + year_end + "</td></tr>";
-    //         }
-    //       }
-    //       $("#cars1").append(listitems);
-    //       console.log(selectedMark);
-    //     }
-    //   })
-
-    //   $('.car-1').show();
-    // });
-
-
     $("#model-select").change(function() {
       var selectedModel = this.value;
       var selectedMark = $( "#marke-select option:selected" ).val();
@@ -537,19 +503,16 @@
               var name = rowCells[2].replace(/'/g, "");
               var year_start = rowCells[3].replace(/'/g, "");
               var year_end = rowCells[4].replace(/'/g, "");
-              listitems += "<tr data-key=\"" + key + "\"><td>" + name + "</td><td>" + year_start + " - " + year_end + "</td></tr>";
+              listitems += "<tr data-key=\"" + key + "\" data-name=\"" + name + "\"><td>" + name + "</td><td>" + year_start + " - " + year_end + "</td></tr>";
             }
           }
           $("#cars1").append(listitems);
 
           $("#cars1 tr").click(function(){
             $(this).addClass('tr-active').siblings().removeClass('tr-active');
-            selectedGeneration = $(this).data("key");
+            selectedGeneration = $(this).data("name");
             document.getElementById('car_generation_value').value = selectedGeneration;
-            console.log(selectedGeneration);
-
-
-
+            // console.log(selectedGeneration);
 
             $.ajax({
               url: "https://api.car2db.com/api/auto/v1/trim.getAll.csv.de?id_type=1&api_key=Patrick.Bartels@gmail.com07826d8551ba1146a91ef240875fdd02",
@@ -569,14 +532,14 @@
                     var name = rowCells[3].replace(/'/g, "");
                     var year_start = rowCells[4].replace(/'/g, "");
                     var year_end = rowCells[5].replace(/'/g, "");
-                    listitems += "<tr data-key=\"" + key + "\"><td>" + name + "</td><td></td><td>" + year_start + " - " + year_end + "</td></tr>";
+                    listitems += "<tr data-key=\"" + key + "\" data-name=\"" + name + "\"><td>" + name + "</td><td></td><td>" + year_start + " - " + year_end + "</td></tr>";
                   }
                 }
                 $("#car_models").append(listitems);
 
                 $("#car_models tr").click(function(){
                   $(this).addClass('tr-active').siblings().removeClass('tr-active');
-                  var value=$(this).data("key");
+                  var value=$(this).data("name");
                   document.getElementById('car_model_value').value = value;
                   console.log(value);
                 });
@@ -598,6 +561,7 @@
 
     $("#marke-select").on('change', function(){
       var selectedMark = this.value;
+      var selectedMarkName = $(this).find("option:selected").text();;
 
       $.ajax({
         url: "https://api.car2db.com/api/auto/v1/model.getAll.csv.de?id_type=1&api_key=Patrick.Bartels@gmail.com07826d8551ba1146a91ef240875fdd02",
@@ -620,6 +584,7 @@
             }
           }
           $("#model-select").append(listitems);
+          document.getElementById('car_marke_value').value = selectedMarkName;
           // console.log(selectedMark);
         }
       });
