--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="header" id="top">
   <nav class="navbar navbar-expand-lg bg-white px-3 shadow-sm mb-3" aria-label="Fourth navbar example">
     <div class="container">
-      <a class="navbar-brand py-0" href="anmeldung">
+      <a class="navbar-brand py-0" href="/anmeldung">
         <%= image_tag "logo-new.png", alt: "" %>
       </a>
       <button class="navbar-toggler border-0 bg-transparent" type="button" data-bs-toggle="collapse"
