Add kaufvertrag pdf generation

--- a/app/views/kaufvertrag/index.html.erb
+++ b/app/views/kaufvertrag/index.html.erb
@@ -69,7 +69,7 @@
                   <h5 class="mt-4">FAHRZEUG</h5>
                   <div class="table-responsive">
 
-                    <table class="table my_table w-100">
+                    <table class="table my_table w-100" id= "cars_table">
                       <tr>
                         <th>Marke, Modell, Modellvariante
                         </th>
@@ -79,15 +79,15 @@
                         </th>
                         <th>Preis</th>
                       </tr>
-                      <tr>
-                        <td>A8 4.2 quattro Langversion 4 Türen (334 PS/246 kW)
-                        </td>
-                        <td>1
-                        </td>
-                        <td>-
-                        </td>
-                        <td>-</td>
-                      </tr>
+                      <% Car.all.each do |car| %>
+                        <tr>
+                          <td style="display:none;"><%=car[:id] %></td>
+                          <td><%="#{car[:name]} #{car[:model]}" %></td>
+                          <td><%=car[:id] %></td>
+                          <td><%=car[:bhp] %></td>
+                          <td></td>
+                        </tr>
+                      <%  end  %>
                     </table>
                   </div>
                 </div>
@@ -125,23 +125,26 @@
                 </div>
 
 
-                <h5 class="mt-5">FAHRZEUG</h5>
+                <h5 class="mt-5">KUNDE</h5>
                 <div class="mb-3 d-block d-md-flex">
 
                   <div class="w-75">
                     <div class="table-responsive">
 
-                      <table class="table my_table w-100">
+                      <table class="table my_table w-100" id="cust_table">
                         <tr>
                           <th>Persönliche Daten</th>
-                          <th>Telefon</th>
+                          <th>E-Mail</th>
                           <th>Fahrzeug </th>
                         </tr>
-                        <tr>
-                          <td>Patrick Bartels</td>
-                          <td>+49 171 883 1117</td>
-                          <td></td>
-                        </tr>
+                        <% Hinzufugen.all.each do |cust| %>
+                          <tr>
+                            <td style="display:none;"><%=cust[:id] %></td>
+                            <td><%="#{cust[:first_name]} #{cust[:last_name]}" %></td>
+                            <td><%=cust[:email] %></td>
+                            <td></td>
+                          </tr>
+                        <%  end  %>
                       </table>
                     </div>
                   </div>
@@ -389,7 +392,7 @@
                 <div class="row">
                   <div class="col-md-6 col-sm-12">
                     <div class="h-100">
-                      <iframe src="<%= asset_path 'kaufvertrag.pdf' %>#toolbar=0" frameborder="0"
+                      <iframe src="<%= generate_kaufvertrag_path(format: :pdf) %>" frameborder="0"
                               class="w-100 h-100"></iframe>
                     </div>
 
@@ -455,8 +458,7 @@
                   <div>
                     <%= image_tag "checklist-icon.png", alt: "" %>
                   </div>
-                  <div class="mt-1 ms-2"><a id="" class="link-reset fw-bold"
-                                            href="<%= asset_path 'kaufvertrag.pdf' %>">Kaufvertrag.pdf</a>
+                  <div class="mt-1 ms-2"><%= link_to "Kaufvertrag.pdf", generate_kaufvertrag_path(format: :pdf), id: "probefahrt_pdf_dwnld", class: "link-reset fw-bold" %>
                   </div>
                 </div>
                 <div class="mt-4">
@@ -623,3 +625,23 @@
 </body>
 
 </html>
+
+<script type="text/javascript">
+  var link_url = $('#probefahrt_pdf_dwnld')[0].pathname
+  var selected_val = {}
+    $("#cars_table tr").click(function(){
+        $(this).addClass('tr-active').siblings().removeClass('tr-active');
+        var value=$(this).find('td:first').html();
+        selected_val["car_id"] = value;
+        link_url = link_url + "?car_id=" + value;
+    });
+
+    $("#cust_table tr").click(function(){
+        $(this).addClass('tr-active').siblings().removeClass('tr-active');
+        var value=$(this).find('td:first').html();
+        selected_val["cust_id"] = value;
+        link_url = link_url + "&cust_id=" + value;
+        $('#probefahrt_pdf_dwnld').attr('href', link_url);
+        $('#probefahrt_pdf_display').attr('src', link_url);
+    });
+</script>
