Add lieferschein pdf generation

--- a/app/views/rechnung/index.html.erb
+++ b/app/views/rechnung/index.html.erb
@@ -330,8 +330,7 @@
                 <div class="row">
                   <div class="col-md-6 col-sm-12">
                     <div class="h-100">
-                       <iframe id="probefahrt_pdf_display" src="<%= generate_rechnung_path(format: :pdf) %>" frameborder="0"
-                              class="w-100 h-100"></iframe>
+                       <iframe id="probefahrt_pdf_display" src="<%= generate_rechnung_path(format: :pdf) %>" frameborder="  0" class="w-100 h-100"></iframe>
                     </div>
 
                   </div>
