Add preisschild pdf generation

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -107,7 +107,7 @@
                     <a href="/lieferschein">Lieferschein</a>
                   </li>
                   <li class="w-50">
-                    <a href="/priesschild">Preisschild</a>
+                    <a href="/preisschild">Preisschild</a>
                   </li>
                   <li class="w-50">
                     <a href="/handzettel">Handzettel</a>
