--- a/app/views/priesschild/index.html.erb
+++ b/app/views/priesschild/index.html.erb
@@ -69,7 +69,7 @@
                 <div class="my-3">
                   <h5 class="mt-4">FAHRZEUG</h5>
                   <div class="table-responsive">
-                    <table class="table my_table w-100">
+                    <table class="table my_table w-100" id= "cars_table">
                       <tr>
                         <th>Marke, Modell, Modellvariante</th>
                         <th>EZ</th>
@@ -77,13 +77,15 @@
                         <th>km</th>
                         <th>Datum</th>
                       </tr>
-                      <tr>
-                        <td>A8 4.2 quattro Langversion 4 Türen (334 PS/246 kW)</td>
-                        <td>03.2006</td>
-                        <td>0 €</td>
-                        <td></td>
-                        <td>13.04.2021</td>
-                      </tr>
+                      <% Car.all.each do |car| %>
+                        <tr>
+                          <td style="display:none;"><%=car[:id] %></td>
+                          <td><%="#{car[:name]} #{car[:model]}" %></td>
+                          <td><%=car[:id] %></td>
+                          <td><%=car[:bhp] %></td>
+                          <td></td>
+                        </tr>
+                      <%  end  %>
                     </table>
                   </div>
                 </div>
@@ -93,8 +95,7 @@
                 <div class="row">
                   <div class="col-md-6 col-sm-12">
                     <div class="h-100">
-                      <iframe src="<%= asset_path 'preisschild.pdf' %>#toolbar=0" frameborder="0"
-                              class="w-100 h-100"></iframe>
+                      <iframe id="probefahrt_pdf_display" src="<%= generate_preisschild_path(format: :pdf) %>" frameborder="  0" class="w-100 h-100"></iframe>
                     </div>
                   </div>
                   <div class="col-md-6 col-sm-12">
@@ -164,8 +165,8 @@
                       <div>
                         <%= image_tag "checklist-icon.png", alt: "" %>
                       </div>
-                      <div class="mt-1 ms-2"><a id="" class="link-reset fw-bold"
-                                                href="<%= asset_path 'preisschild.pdf' %>">Preisschild.pdf</a>
+                      <div class="mt-1 ms-2">
+                        <%= link_to "Preisschild.pdf", generate_preisschild_path(format: :pdf), id: "probefahrt_pdf_dwnld", class: "link-reset fw-bold" %>
                       </div>
                     </div>
                     <div class="mt-4">
@@ -218,3 +219,16 @@
 </body>
 
 </html>
+
+<script type="text/javascript">
+  var link_url = $('#probefahrt_pdf_dwnld')[0].pathname
+  var selected_val = {}
+    $("#cars_table tr").click(function(){
+        $(this).addClass('tr-active').siblings().removeClass('tr-active');
+        var value=$(this).find('td:first').html();
+        selected_val["car_id"] = value;
+        link_url = link_url + "?car_id=" + value;
+        $('#probefahrt_pdf_dwnld').attr('href', link_url);
+        $('#probefahrt_pdf_display').attr('src', link_url);
+    });
+</script>
