--- a/app/views/handzettel/index.html.erb
+++ b/app/views/handzettel/index.html.erb
@@ -35,7 +35,9 @@
                   <a id="profile2-tab" data-toggle="tab" href="#tab2"
                      class="nav-link">Vorschau</a>
                 </li>
-
+                <li class="nav-item flex-sm-fill">
+                  <a id="profile2-tab" data-toggle="tab" href="#tab3" class="nav-link">Speichern</a>
+                </li>
 
               </ul>
               <div id="myTab2Content" class="tab-content">
@@ -75,7 +77,7 @@
                   <div class="my-3">
                     <div class="table-responsive">
 
-                      <table class="table my_table w-100">
+                      <table class="table my_table w-100" id= "cars_table">
 
                         <tr>
                           <th>Marke, Modell, Modellvariante</th>
@@ -84,13 +86,15 @@
                           <th>km</th>
                           <th>Datum</th>
                         </tr>
-                        <tr>
-                          <td>A8 4.2 quattro Langversion 4 Türen (334 PS/246 kW)</td>
-                          <td>03.2006</td>
-                          <td>0 €</td>
-                          <td></td>
-                          <td>13.04.2021</td>
-                        </tr>
+                        <% Car.all.each do |car| %>
+                          <tr>
+                            <td style="display:none;"><%=car[:id] %></td>
+                            <td><%="#{car[:name]} #{car[:model]}" %></td>
+                            <td><%=car[:id] %></td>
+                            <td><%=car[:bhp] %></td>
+                            <td></td>
+                          </tr>
+                        <%  end  %>
 
                       </table>
                     </div>
@@ -109,8 +113,7 @@
                   <div class="row">
                     <div class="col-md-6 col-sm-12">
                       <div class="h-100">
-                        <iframe src=" <%= asset_path 'handzettel.pdf' %>#toolbar=0" frameborder="0"
-                                class="w-100 h-100"></iframe>
+                        <iframe id="probefahrt_pdf_display" src="<%= generate_handzettel_path(format: :pdf) %>" frameborder="  0" class="w-100 h-100"></iframe>
                       </div>
 
                     </div>
@@ -177,8 +180,39 @@
                   </div>
                 </div>
 
+                <div id="tab3" role="tabpanel" aria-labelledby="contact-tab"
+                   class="tab-pane fade px-4 py-5">
+                <div class="row">
+                  <div class="col-md-12 col-sm-12">
+                    <div class="d-flex">
+
+                      <div>
+                        <%= image_tag "checklist-icon.png", alt: "" %>
+                      </div>
+                      <div class="mt-1 ms-2">
+                        <%= link_to "Handzettel.pdf", generate_handzettel_path(format: :pdf), id: "probefahrt_pdf_dwnld", class: "link-reset fw-bold" %>
+                      </div>
+                    </div>
+                    <div class="mt-4">
+                      <a href="#" class="link-reset fw-bold d-block my-2">
+                        Neuen Handzettel erstellen
+                      </a>
+                      <a href="#" class="link-reset fw-bold d-block my-2">
+                        Liste der Dokumente
+                      </a>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+
 
               </div>
+
+
+
+
+
               <!-- End lined tabs -->
             </div>
           </div>
@@ -214,3 +248,16 @@
 </body>
 
 </html>
+
+<script type="text/javascript">
+  var link_url = $('#probefahrt_pdf_dwnld')[0].pathname
+  var selected_val = {}
+    $("#cars_table tr").click(function(){
+        $(this).addClass('tr-active').siblings().removeClass('tr-active');
+        var value=$(this).find('td:first').html();
+        selected_val["car_id"] = value;
+        link_url = link_url + "?car_id=" + value;
+        $('#probefahrt_pdf_dwnld').attr('href', link_url);
+        $('#probefahrt_pdf_display').attr('src', link_url);
+    });
+</script>
