--- a/app/views/popup/_carmodelpopup_two.html.erb
+++ b/app/views/popup/_carmodelpopup_two.html.erb
@@ -419,7 +419,7 @@
                 </div>
             </div>
         </div> -->
-        <p class="mb-0">Wählen Sie ein Modell aus dem Katalog aus, um die passende Modellvarlante zu finden
+        <p class="mb-0">Wählen Sie ein Modell aus dem Katalog aus, um die passende Modellvariante zu finden
         </p>
         <div class="table-responsive">
           <table class="table my_table w-100" id="cars1">
@@ -432,14 +432,14 @@
           <%= form.hidden_field :car_generation_value, value: ''  %>
         </div>
         <p class="mb-0">
-          Wahlen Sle elne Modellvarlante
+          Wahlen Sle elne Modellvariante
         </p>
         <div class="table-responsive">
           <table class="table my_table w-100" id="car_models">
             <tr>
-              <th>Modellvarlante</th>
+              <th>Modellvariante</th>
               <th>Brutto Neuprels</th>
-              <th>Produktlonszeltraum</th>
+              <th>Produktionszeitraum</th>
             </tr>
             <CAPTION> Es gibt keine Modelle, die Ihren Suchkriterien entsprechen
             </CAPTION>
