--- a/app/views/hinzufugen/new.html.erb
+++ b/app/views/hinzufugen/new.html.erb
@@ -26,7 +26,7 @@
       <div class="content p-3">
         <div class="d-block d-md-flex justify-content-between">
           <div class="w-50">
-            <h1 class="m-0">kunde hinzufugen</h1>
+            <h1 class="m-0">Kunde hinzufügen</h1>
             </p>
           </div>
 
