--- a/app/views/popup/_carmodelpopup.html.erb
+++ b/app/views/popup/_carmodelpopup.html.erb
@@ -4,7 +4,7 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <h6 class="modal-title" id="staticBackdropLabel">FAHRZEUG HINZUFUGEN</h6>
+        <h6 class="modal-title" id="staticBackdropLabel">Fahrzeug hinzufügen</h6>
         <i class="fa fa-times btn-close" data-bs-dismiss="#staticBackdrop" aria-label="Close" aria-hidden="true"></i>
       </div>
       <div class="modal-body">
